# whaleherder

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
app/: herder.py  main.py
tests/: test_http.py  test_whaleherder.py
whaleherder/: __init__.py  app.py  config.py  docker.py  herder.py  main.py
