[tool.poetry]
name = "whaleherder"
version = "0.0.1"
description = "Swarm services update from webhooks"
authors = ["Etienne Napoleone <etienne@tomochain.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.0"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
flake8 = "^3.5"
pytest = "^3.8"
